--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://costakob.github.io/socialReactProject/",
   "dependencies": {
     "axios": "^0.19.2",
     "react": "^16.13.1",
@@ -15,13 +16,16 @@
     "reselect": "^4.0.0"
   },
   "devDependencies": {
+    "gh-pages": "^3.0.0",
     "react-test-renderer": "^16.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
